# Bedrock

./: .gitignore  Cargo.toml  Makefile  README.md  Vagrantfile  boot.s  entry.s  linker.ld  vagrant-bootstrap.sh
.cargo/: config
bootloader/: Cargo.toml  Makefile
bootloader/src/: console.rs  constants.rs  core.rs  lib.rs  serial.rs
bootloader/src/arch/x86/: asm.rs  bios.rs  console.rs  constants.rs  core.rs  linker.ld  mod.rs  real_mode.s  serial.rs  stage0.s  vga.rs
bootloader/src/arch/x86/bios/: bda.rs  mod.rs  serial.rs
bootloader/src/arch/x86/serial/: mod.rs
bootloader/src/arch/x86/vga/: color.rs  console.rs  text.rs
bootloader/src/arch/x86_64/: entry.s
bootloader/src/bios/: bda.rs
intrinsics/: Cargo.toml
intrinsics/src/: lib.rs
src/: builder.rs  config.rs  lib.rs  main.rs  panic.rs  program.rs
src/arch/x86/: console.rs  linker.ld
src/arch/x86/bios/: serial.rs
src/arch/x86_64/: entry.s  grub.cfg  multiboot.s
src/bootloader/: console.rs  lib.rs
src/bootloader/arch/x86/: mod.rs
src/intrinsics/src/: lib.rs
src/kernel/arch/x86_64/: entry.s  linker.ld
src/serial/: mod.rs
src/x86_64/src/: lib.rs
support/triples/: i686-none-redstone.json  x86_64-none-redstone.json
support/vagrant/: privileged.sh
vagrant/: bootstrap.sh  privileged.sh
x86_64/: Cargo.toml
x86_64/src/: lib.rs
x86_64/src/bios/: mod.rs  serial.rs
x86_64/src/instructions/: io.rs
x86_64/src/vga/: console.rs  mod.rs  text.rs
