[package]
name = "redstone"
version = "0.1.0"
authors = ["Ryan Liang <rl@ryanl.io>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
# Even in debug mode we still need optimization
# because some weird ass codegen problem that causes
# array allocation to hang
lto         = true
opt-level   = 3

[profile.release]
opt-level   = 3
lto         = true
panic       = 'abort'
incremental = false
